--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -41,7 +41,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Users table</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/admin/create">New user</a>
+                    <a class="nav-link" href="/admin/createGet">New user</a>
                 </li>
                 <table class="table table-striped table-hover caption-top">
                     <caption class="fw-bold table-caption p-3">All users</caption>
@@ -130,9 +130,9 @@
                                                         Role
                                                         <select class="custom-select form-control" multiple name="role"
                                                                 id="roleInput" size="2" th:value="${user.roles}">
-                                                            <option>ADMIN</option>
+                                                            <option value="1, 2">ADMIN</option>
                                                             &nbsp
-                                                            <option>USER</option>
+                                                            <option value="1">USER</option>
                                                         </select>
                                                     </div>
                                                 </div>
@@ -142,7 +142,8 @@
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">
                                                     Close
                                                 </button>
-                                                <form th:action="@{/admin/update}" th:method="post" th:object="${user}">
+                                                <form th:action="@{/admin/update}" th:object="${user}">
+                                                    <input type="hidden" name="_method" value="put" />
                                                     <button type="submit" data-dismiss="modal"
                                                             class="btn btn-primary editBtn">Edit
                                                     </button>
@@ -218,11 +219,22 @@
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">
                                                     Close
                                                 </button>
-                                                <form th:action="@{/admin/delete/{id}(id=user.id)}" th:method="post">
-                                                    <button type="submit" data-dismiss="modal"
-                                                            class="btn btn-danger deleteBtn">Delete
-                                                    </button>
-                                                </form>
+<!--                                                <form th:action="@{/admin/delete/{id}(id=${user.id})}" method="post">-->
+<!--                                                    <input type="hidden" th:name="_method" th:value="DELETE" />-->
+<!--                                                    <button type="submit" class="btn btn-danger deleteBtn">-->
+<!--                                                        Delete-->
+<!--                                                    </button>-->
+<!--                                                  </form>-->
+
+<!--                                                Я монимаю, что delete нужно через пост делать, но когда я делаю пост-->
+<!--                                                (я помню про контроллер), то мой запрос выглядит вот так :-->
+<!--                                                http://localhost:8080/admin/admin?id=1&name=Alex&age=22&-->
+<!--                                                email=zinkalexvvv%40gmail.com&-->
+<!--                                                role=%5BROLE_USER%2C+ROLE_ADMIN%5D&_method=DELETE-->
+<!--                                                И ничего не происходит. Почему данные не в теле пост запроса передаются?-->
+<!--                                                А при гет запросе, как раз таки всё ок. Объясни этот момент плз)-->
+
+                                                <a type="button" class="btn btn-danger deleteBtn" th:href="@{/admin/delete/{id}(id=${user.id})}">Delete</a>
                                             </div>
 
                                         </div>
