--- a/src/main/resources/templates/deleteCompleted.html
+++ b/src/main/resources/templates/deleteCompleted.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1 style="text-align: center;">Пользователь успешно удалён!</h1>
-<a href="admin" style="display: block; text-align: center; font-size: 24px;">Перейти на главную</a>
+<a href="/admin/admin" style="display: block; text-align: center; font-size: 24px;">Перейти на главную</a>
 </body>
 </html>
