--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
     <div class="row bg-dark text-white d-flex justify-content-between align-items-center" style="height: 50px;">
         <!-- Dark top bar on the page -->
         <div class="p-2">
-            <p>Email: <span th:text="${user.email}"></span>, Roles: <span th:text="${user.roles}"></span></p>
+            <p>Email: <span th:text="${user.email}"></span>, Roles: <span th:text="${user.getStringRoles()}"></span></p>
             <a href="/logout" class="text-white p-2 position-absolute top-0 end-0">Logout</a>
         </div>
 
@@ -31,39 +31,25 @@
             </div>
         </div>
         <div class="col-10 bg-light" style="height: 100vh;">
+            <script>var userID = [[${user.id}]];</script>
+            <script src="/JS_code/userTable.js" ></script>
             <!-- Светло-серая правая часть страницы -->
             <h1 class="p-2">User information page</h1>
-                <table class="table table-striped table-hover caption-top">
-                    <caption class="fw-bold table-caption p-3">About user</caption>
-                    <thead>
-                    <tr>
-                        <th class="text-center">ID</th>
-                        <th class="text-center">First Name</th>
-                        <th class="text-center">Last Name</th>
-                        <th class="text-center">Age</th>
-                        <th class="text-center">Email</th>
-                        <th class="text-center">Role</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td class="text-center" th:text="${user.id}"></td>
-                        <td class="text-center" th:text="${user.firstName}"></td>
-                        <td class="text-center" th:text="${user.lastName}"></td>
-                        <td class="text-center" th:text="${user.age}"></td>
-                        <td class="text-center" th:text="${user.email}"></td>
-                        <td class="text-center" th:text="${user.roles}"></td>
-                    </tr>
-                    </tbody>
-                </table>
-
+            <table class="table table-striped table-hover caption-top" id="table">
+                <caption class="fw-bold table-caption p-3">About user</caption>
+                <thead></thead>
+                <tbody></tbody>
+            </table>
         </div>
     </div>
 </div>
 
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
+
 </html>
+
+
+
+
+
