--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -41,24 +41,72 @@
             <div class="tab-pane fade show active" id="v-pills-admin">
                 <h1 class="p-2">Admin panel</h1>
 
+                <nav>
+                    <div class="nav nav-tabs">
+                        <button class="nav-link active" aria-current="page" data-toggle="tab" role="tab" data-target="#allUsers">
+                            Users table
+                        </button>
+                        <button class="nav-link" data-toggle="tab" data-target="#formNewUser" role="tab">
+                            New user
+                        </button>
+                    </div>
+                </nav>
 
-<!----------------------------Last thing-->
 
-                <ul class="nav nav-tabs">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Users table</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin/createGet">New user</a>
-                    </li>
-                    <table class="table table-striped table-hover caption-top" id="adminTable">
-                        <caption class="fw-bold table-caption p-3">All users</caption>
-                        <thead></thead>
-                        <tbody></tbody>
-                    </table>
-                </ul>
+                <div class="tab-content" id="nav-tabContent">
+                    <div class="tab-pane fade show active" id="allUsers" role="tabpanel">
+                        <table class="table table-striped table-hover caption-top" id="adminTable">
+                            <caption class="fw-bold table-caption p-3">All users</caption>
+                            <thead></thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
 
- <!---------------------------------------------------------Last thing-->
+                    <div class="tab-pane fade" id="formNewUser" role="tabpanel">
+                        <div class="col-10 bg-white p-2 d-flex justify-content-center align-items-center" style="height: 100vh;">
+                            <div class="col-5 bg-white p-2" style="height: 100vh;">
+                                <form id="userForm" class="mb-3">
+                                    <div class="mb-3">
+                                        <label for="exampleInputFirstName" class="form-label">First Name</label>
+                                        <input type="text" class="form-control" id="exampleInputFirstName" name="firstName"
+                                               required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="exampleInputLastName" class="form-label">Last Name</label>
+                                        <input type="text" class="form-control" id="exampleInputLastName" name="lastName" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="exampleInputAge" class="form-label">Age</label>
+                                        <input type="number" class="form-control" id="exampleInputAge" name="age" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="exampleInputEmail1" class="form-label">Email</label>
+                                        <input type="email" class="form-control" id="exampleInputEmail1" name="email" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                                        <input type="password" class="form-control" id="exampleInputPassword1" name="password"
+                                               required>
+                                    </div>
+                                    <div class="col-6 mx-auto text-center font-weight-bold">
+                                        Role
+                                        <select class="custom-select form-control" multiple name="roles" id="roleInputCreate" size="2"
+                                                required>
+                                            <option value="ADMIN">ADMIN</option>
+                                            &nbsp
+                                            <option value="USER">USER</option>
+                                        </select>
+                                    </div>
+
+                                    <div class="p-4">
+                                        <button type="button" id="addUserButton" class="btn btn-success">Add new user</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
 
             </div>
             <!---------------------------------------------------------------------------------------------------------------------------->
@@ -225,7 +273,7 @@
 
 
 <script>var thisUserID = [[${thisUser.id}]];</script>
-<script src="/JS_code/adminTable.js" ></script>
+<script src="/JS_code/adminPage.js" ></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
