--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -86,7 +86,7 @@
                                     <div class="mb-3">
                                         <label for="exampleInputPassword1" class="form-label">Password</label>
                                         <input type="password" class="form-control" id="exampleInputPassword1" name="password"
-                                               required>
+                                               maxlength="8" required>
                                     </div>
                                     <div class="col-6 mx-auto text-center font-weight-bold">
                                         Role
